fix: Vertical layout issues

--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -68,11 +68,6 @@
                 bottom: -6px;
                 left: 7px;
             }
-
-            .datepicker-months,
-            .datepicker-years {
-                padding-bottom: 25px;
-            }
         }
 
         &.pull-right {
@@ -85,6 +80,12 @@
                 left: auto;
                 right: 7px;
             }
+        }
+
+        .datepicker-months,
+        .datepicker-years,
+        .datepicker-decades {
+            padding-bottom: 26px;
         }
     }
 
@@ -334,10 +335,6 @@
 	&.wider {
 		width: 21em;
 	}
-
-	& .datepicker-decades .decade {
-        line-height: 1.8em !important;
-    }
 }
 
 .input-group.date {
